frontend/src/components/Thumbnail/Thumbnail.module.scss
@import 'styles/includes';

.container {
	width: 100%;
	display: flex;
	flex-direction: column;
	gap: 0.5rem;

	&.season,
	&.show {
		.thumbnail {
			width: 100%;
			height: calc(100% * 2 / 3);

			position: relative;
		}
	}

	@include light-mode {
		.thumbnail {
			box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
			transition: box-shadow 0.2s;
		}

		&:hover .thumbnail {
			box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.22);
		}
	}

	&.clip,
	&.episode {
		.thumbnail {
			height: 100%;
			width: calc(100% * 9 / 16);
		}
	}

	.thumbnail {
		border-radius: 4px;
	}

	.title {
		font-weight: 600;
		margin: 0;

		text-overflow: ellipsis;
		overflow: hidden;
		white-space: nowrap;
		text-decoration: none;
	}
}

